esio: #1503 add deps to *.la
Plus build system cleanups taking advantage of this.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@18647 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -7,7 +7,6 @@ AM_FCFLAGS      = -I$(top_builddir)        -I$(top_srcdir)
 AM_FCFLAGS     += -I$(top_builddir)/esio
 AM_LDFLAGS      = # Append below
 noinst_PROGRAMS = # Append below
-noinst_HEADERS  = mpi_argp.h
 bin_PROGRAMS    = # Append below
 BUILT_DOCS      = # Append below
 BUILT_SOURCES   = # Append below
@@ -19,16 +18,15 @@ CC=@MPICC@
 FC=@MPIFC@
 
 ## Pick up GRVY library includes
-AM_CFLAGS  += $(GRVY_CFLAGS)
-AM_FCFLAGS += $(GRVY_FCFLAGS)
+AM_CPPFLAGS += $(GRVY_CFLAGS)
+AM_FCFLAGS  += $(GRVY_FCFLAGS)
 
 # C-based benchmarking tool
 bin_PROGRAMS        += esio_bench
-esio_bench_SOURCES   = esio_bench.c mpi_argp.c
+esio_bench_SOURCES   = esio_bench.c mpi_argp.c mpi_argp.h
 esio_bench_CPPFLAGS  = $(AM_CPPFLAGS) $(HDF5_CPPFLAGS)
 esio_bench_LDADD     = ../esio/libesio.la
 esio_bench_LDADD    += ../gnulib/libgnu.la $(LTLIBINTL)
-esio_bench_LDADD    += $(HDF5_LDFLAGS)
 esio_bench_LDADD    += $(GRVY_LIBS)
 
 # Restart renaming tool which has few formal ESIO dependencies
@@ -40,7 +38,7 @@ esio_rename_LDADD    = ../gnulib/libgnu.la $(LTLIBINTL) -lm
 # See http://code.google.com/p/p3dfft/ for more details on P3DFFT
 noinst_PROGRAMS          += p3dfft_like
 p3dfft_like_SOURCES       = p3dfft_like_header.f90 p3dfft_like.f90
-p3dfft_like_LDADD         = ../esio/libesiof.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+p3dfft_like_LDADD         = ../esio/libesiof.la $(GRVY_LIBS)
 p3dfft_like_LIBTOOLFLAGS  = --tag=FC
 p3dfft_like.f90: p3dfft_like_header.o    # Explicit module dependence
 
