--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -40,226 +40,226 @@ AM_FCFLAGS  += $(HDF5_FFLAGS)
 TESTS                   += restart_helpers
 check_PROGRAMS          += restart_helpers
 restart_helpers_SOURCES  = restart_helpers.c ../esio/restart-rename.c
-restart_helpers_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
+restart_helpers_LDADD    = ../esio/libesio.la
 
 ## Internal restart renaming logic tests
 TESTS             += uri_tests
 check_PROGRAMS    += uri_tests
 uri_tests_SOURCES  = uri_tests.c ../esio/uri.c
-uri_tests_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
+uri_tests_LDADD    = ../esio/libesio.la
 
 #############################################################################
 ## BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC ##
 #############################################################################
 
 ## Basic C API sanity checks
-TESTS          += basic.sh     # NB Wrapper script
-EXTRA_DIST     += basic.sh     # NB Wrapper script
+TESTS          += basic.sh     # Wrapper script
+EXTRA_DIST     += basic.sh     # Wrapper script
 check_PROGRAMS += basic
 basic_SOURCES   = basic.c testutils.c
-basic_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
+basic_LDADD     = ../esio/libesio.la
 
 ## Basic Fortran API sanity checks
 TESTS           += basic_f
 check_PROGRAMS  += basic_f
 basic_f_SOURCES  = basic_f.f90 testutils.c testframework.f90
-basic_f_LDADD    = ../esio/libesiof.la $(HDF5_LDFLAGS)
+basic_f_LDADD    = ../esio/libesiof.la
 
 ###########################################################################
 ## STRING STRING STRING STRING STRING STRING STRING STRING STRING STRING ##
 ###########################################################################
 
 ## String tests...
-TESTS          += string.sh    # NB Wrapper script
-EXTRA_DIST     += string.sh    # NB Wrapper script
+TESTS          += string.sh    # Wrapper script
+EXTRA_DIST     += string.sh    # Wrapper script
 
 ## ...in C
 check_PROGRAMS += string
 string_SOURCES  = string.c testutils.c
-string_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
+string_LDADD    = ../esio/libesio.la
 
 ## ...in Fortran
 check_PROGRAMS   += string_f
 string_f_SOURCES  = string_f.f90 testutils.c testframework.f90
-string_f_LDADD    = ../esio/libesiof.la $(HDF5_LDFLAGS)
+string_f_LDADD    = ../esio/libesiof.la
 
 ###########################################################################
 ## ATTRIBUTE ATTRIBUTE ATTRIBUTE ATTRIBUTE ATTRIBUTE ATTRIBUTE ATTRIBUTE ##
 ###########################################################################
 
 ## Attribute double precision tests in C
-TESTS                    += attribute_double.sh    # NB Wrapper script
-EXTRA_DIST               += attribute_double.sh    # NB Wrapper script
+TESTS                    += attribute_double.sh    # Wrapper script
+EXTRA_DIST               += attribute_double.sh    # Wrapper script
 check_PROGRAMS           += attribute_double
 attribute_double_SOURCES  = attribute_double.c testutils.c
-attribute_double_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
+attribute_double_LDADD    = ../esio/libesio.la
 
 ## Attribute single precision tests in C
-TESTS                   += attribute_float.sh     # NB Wrapper script
-EXTRA_DIST              += attribute_float.sh     # NB Wrapper script
+TESTS                   += attribute_float.sh     # Wrapper script
+EXTRA_DIST              += attribute_float.sh     # Wrapper script
 check_PROGRAMS          += attribute_float
 attribute_float_SOURCES  = attribute_float.c testutils.c
-attribute_float_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
+attribute_float_LDADD    = ../esio/libesio.la
 
 ## Attribute integer tests...
-TESTS                 += attribute_int.sh         # NB Wrapper script
-EXTRA_DIST            += attribute_int.sh         # NB Wrapper script
+TESTS                 += attribute_int.sh         # Wrapper script
+EXTRA_DIST            += attribute_int.sh         # Wrapper script
 
 ## ...in C
 check_PROGRAMS        += attribute_int
 attribute_int_SOURCES  = attribute_int.c testutils.c
-attribute_int_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
+attribute_int_LDADD    = ../esio/libesio.la
 
 ## ...in Fortran
 check_PROGRAMS          += attribute_int_f
 attribute_int_f_SOURCES  = attribute_int_f.f90 testutils.c testframework.f90
-attribute_int_f_LDADD    = ../esio/libesiof.la $(HDF5_LDFLAGS)
+attribute_int_f_LDADD    = ../esio/libesiof.la
 
 ###########################################################################
 ## LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE ##
 ###########################################################################
 
 ## Line double precision tests in C
-TESTS               += line_double.sh    # NB Wrapper script
-EXTRA_DIST          += line_double.sh    # NB Wrapper script
+TESTS               += line_double.sh    # Wrapper script
+EXTRA_DIST          += line_double.sh    # Wrapper script
 check_PROGRAMS      += line_double
 line_double_SOURCES  = line_double.c testutils.c
-line_double_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
+line_double_LDADD    = ../esio/libesio.la
 
 ## Line single precision tests in C
-TESTS               += line_float.sh     # NB Wrapper script
-EXTRA_DIST          += line_float.sh     # NB Wrapper script
+TESTS               += line_float.sh     # Wrapper script
+EXTRA_DIST          += line_float.sh     # Wrapper script
 check_PROGRAMS      += line_float
 line_float_SOURCES   = line_float.c testutils.c
-line_float_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
+line_float_LDADD     = ../esio/libesio.la
 
 ## Line integer tests...
-TESTS             += line_int.sh         # NB Wrapper script
-EXTRA_DIST        += line_int.sh         # NB Wrapper script
+TESTS             += line_int.sh         # Wrapper script
+EXTRA_DIST        += line_int.sh         # Wrapper script
 
 ## ...in C
 check_PROGRAMS    += line_int
 line_int_SOURCES   = line_int.c testutils.c
-line_int_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
+line_int_LDADD     = ../esio/libesio.la
 
 ## ...in Fortran
 check_PROGRAMS     += line_int_f
 line_int_f_SOURCES  = line_int_f.f90 testutils.c testframework.f90
-line_int_f_LDADD    = ../esio/libesiof.la $(HDF5_LDFLAGS)
+line_int_f_LDADD    = ../esio/libesiof.la
 
 #############################################################################
 ## PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE ##
 #############################################################################
 
 ## Plane double precision tests in C
-TESTS                += plane_double.sh    # NB Wrapper script
-EXTRA_DIST           += plane_double.sh    # NB Wrapper script
+TESTS                += plane_double.sh    # Wrapper script
+EXTRA_DIST           += plane_double.sh    # Wrapper script
 check_PROGRAMS       += plane_double
 plane_double_SOURCES  = plane_double.c testutils.c
-plane_double_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
+plane_double_LDADD    = ../esio/libesio.la
 
 ## Plane single precision tests in C
-TESTS                += plane_float.sh     # NB Wrapper script
-EXTRA_DIST           += plane_float.sh     # NB Wrapper script
+TESTS                += plane_float.sh     # Wrapper script
+EXTRA_DIST           += plane_float.sh     # Wrapper script
 check_PROGRAMS       += plane_float
 plane_float_SOURCES   = plane_float.c testutils.c
-plane_float_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
+plane_float_LDADD     = ../esio/libesio.la
 
 ## Plane integer tests...
-TESTS              += plane_int.sh         # NB Wrapper script
-EXTRA_DIST         += plane_int.sh         # NB Wrapper script
+TESTS              += plane_int.sh         # Wrapper script
+EXTRA_DIST         += plane_int.sh         # Wrapper script
 
 ## ...in C
 check_PROGRAMS     += plane_int
 plane_int_SOURCES   = plane_int.c testutils.c
-plane_int_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
+plane_int_LDADD     = ../esio/libesio.la
 
 ## ...in Fortran
 check_PROGRAMS      += plane_int_f
 plane_int_f_SOURCES  = plane_int_f.f90 testutils.c testframework.f90
-plane_int_f_LDADD    = ../esio/libesiof.la $(HDF5_LDFLAGS)
+plane_int_f_LDADD    = ../esio/libesiof.la
 
 #############################################################################
 ## LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 ##
 #############################################################################
 
 ## Layout 0 double precision tests in C
-TESTS                  += layout0_double.sh    # NB Wrapper script
-EXTRA_DIST             += layout0_double.sh    # NB Wrapper script
+TESTS                  += layout0_double.sh    # Wrapper script
+EXTRA_DIST             += layout0_double.sh    # Wrapper script
 check_PROGRAMS         += layout0_double
 layout0_double_SOURCES  = layout0_double.c testutils.c
-layout0_double_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
+layout0_double_LDADD    = ../esio/libesio.la
 
 ## Layout 0 single precision tests in C
-TESTS                  += layout0_float.sh     # NB Wrapper script
-EXTRA_DIST             += layout0_float.sh     # NB Wrapper script
+TESTS                  += layout0_float.sh     # Wrapper script
+EXTRA_DIST             += layout0_float.sh     # Wrapper script
 check_PROGRAMS         += layout0_float
 layout0_float_SOURCES   = layout0_float.c testutils.c
-layout0_float_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
+layout0_float_LDADD     = ../esio/libesio.la
 
 ## Layout 0 integer tests...
-TESTS                += layout0_int.sh         # NB Wrapper script
-EXTRA_DIST           += layout0_int.sh         # NB Wrapper script
+TESTS                += layout0_int.sh         # Wrapper script
+EXTRA_DIST           += layout0_int.sh         # Wrapper script
 
 ## ...in C
 check_PROGRAMS       += layout0_int
 layout0_int_SOURCES   = layout0_int.c testutils.c
-layout0_int_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
+layout0_int_LDADD     = ../esio/libesio.la
 
 ## ...in Fortran
 check_PROGRAMS        += layout0_int_f
 layout0_int_f_SOURCES  = layout0_int_f.f90 testutils.c testframework.f90
-layout0_int_f_LDADD    = ../esio/libesiof.la $(HDF5_LDFLAGS)
+layout0_int_f_LDADD    = ../esio/libesiof.la
 
 #############################################################################
 ## LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 ##
 #############################################################################
 
 ## Layout 1 double precision tests in C
-TESTS                  += layout1_double.sh    # NB Wrapper script
-EXTRA_DIST             += layout1_double.sh    # NB Wrapper script
+TESTS                  += layout1_double.sh    # Wrapper script
+EXTRA_DIST             += layout1_double.sh    # Wrapper script
 check_PROGRAMS         += layout1_double
 layout1_double_SOURCES  = layout1_double.c testutils.c
-layout1_double_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
+layout1_double_LDADD    = ../esio/libesio.la
 
 ## Layout 1 single precision tests in C
-TESTS                  += layout1_float.sh     # NB Wrapper script
-EXTRA_DIST             += layout1_float.sh     # NB Wrapper script
+TESTS                  += layout1_float.sh     # Wrapper script
+EXTRA_DIST             += layout1_float.sh     # Wrapper script
 check_PROGRAMS         += layout1_float
 layout1_float_SOURCES   = layout1_float.c testutils.c
-layout1_float_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
+layout1_float_LDADD     = ../esio/libesio.la
 
 ## Layout 1 integer tests in C
-TESTS                += layout1_int.sh         # NB Wrapper script
-EXTRA_DIST           += layout1_int.sh         # NB Wrapper script
+TESTS                += layout1_int.sh         # Wrapper script
+EXTRA_DIST           += layout1_int.sh         # Wrapper script
 check_PROGRAMS       += layout1_int
 layout1_int_SOURCES   = layout1_int.c testutils.c
-layout1_int_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
+layout1_int_LDADD     = ../esio/libesio.la
 
 #############################################################################
 ## LAYOUT 2 LAYOUT 2 LAYOUT 2 LAYOUT 2 LAYOUT 2 LAYOUT 2 LAYOUT 2 LAYOUT 2 ##
 #############################################################################
 
 ## Layout 2 double precision tests in C
-TESTS                  += layout2_double.sh    # NB Wrapper script
-EXTRA_DIST             += layout2_double.sh    # NB Wrapper script
+TESTS                  += layout2_double.sh    # Wrapper script
+EXTRA_DIST             += layout2_double.sh    # Wrapper script
 check_PROGRAMS         += layout2_double
 layout2_double_SOURCES  = layout2_double.c testutils.c
-layout2_double_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
+layout2_double_LDADD    = ../esio/libesio.la
 
 ## Layout 2 single precision tests in C
-TESTS                  += layout2_float.sh     # NB Wrapper script
-EXTRA_DIST             += layout2_float.sh     # NB Wrapper script
+TESTS                  += layout2_float.sh     # Wrapper script
+EXTRA_DIST             += layout2_float.sh     # Wrapper script
 check_PROGRAMS         += layout2_float
 layout2_float_SOURCES   = layout2_float.c testutils.c
-layout2_float_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
+layout2_float_LDADD     = ../esio/libesio.la
 
 ## Layout 2 integer tests in C
-TESTS                += layout2_int.sh         # NB Wrapper script
-EXTRA_DIST           += layout2_int.sh         # NB Wrapper script
+TESTS                += layout2_int.sh         # Wrapper script
+EXTRA_DIST           += layout2_int.sh         # Wrapper script
 check_PROGRAMS       += layout2_int
 layout2_int_SOURCES   = layout2_int.c testutils.c
-layout2_int_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
+layout2_int_LDADD     = ../esio/libesio.la
 
 #############################################################################
 ### INSTALLED APPLICATIONS INSTALLED APPLICATIONS INSTALLED APPLICATIONS  ###
