--- a/configure.ac
+++ b/configure.ac
@@ -110,7 +110,7 @@ dnl ------------------------------------------------
 dnl Enable GNU libtool
 dnl Current version checks also in Makefile.am
 dnl ------------------------------------------------
-LT_INIT([disable_static])
+LT_INIT()
 LT_PREREQ([2.2.6])
 AC_SUBST(LIBTOOL_DEPS)
 AC_CACHE_SAVE
