esio: #1509 remove -lhdf5_fortran from libesiof.la
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@18676 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/esio-hdf5.pc.in
+++ b/esio-hdf5.pc.in
@@ -14,8 +14,9 @@ hdf5_fflags=@HDF5_FFLAGS@
 hdf5_flibs=@HDF5_FLIBS@
 # Fortran compilation and linking information
 # Retrieve these using `pkg-config --variable=name @PACKAGE_NAME@-hdf5`
+# Note -l@PACKAGE_NAME@f uses the HDF5 C API so no -lhdf5_fortran appears below
 fflags=-I@libdir@
-flibs=-L@libdir@ -lesiof @HDF5_FLIBS@
+flibs=-L@libdir@ -l@PACKAGE_NAME@f @HDF5_LDFLAGS@
 
 Name: @PACKAGE_NAME@-hdf5
 Description: @PACKAGE_DESCRIPTION@
