esio: #1547 --enable-debug=info by default
Ensures we get debugging information in most installs,
plus debugging symbols are cheap.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@18991 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -33,7 +33,7 @@ AC_CACHE_SAVE
 dnl ------------------------------------------------
 dnl Manipulate C settings and find MPI/HDF5
 dnl ------------------------------------------------
-AX_CHECK_ENABLE_DEBUG
+AX_CHECK_ENABLE_DEBUG([info])
 AC_PROG_CC
 gl_EARLY
 gl_INIT
