--- a/esio.pc.in
+++ b/esio.pc.in
@@ -15,7 +15,7 @@ hdf5_flibs=@HDF5_FLIBS@
 # Fortran compilation and linking information
 # Retrieve these using `pkg-config --variable=name @PACKAGE_NAME@`
 fflags=-I@libdir@
-flibs=-L@libdir@ -lesiof
+flibs=-L@libdir@ -l@PACKAGE_NAME@f
 
 Name: @PACKAGE_NAME@
 Description: @PACKAGE_DESCRIPTION@
