esio: add --as-needed, move to ax_check_flag.m4
Check for support of add --as-needed to link lines.
Updates several macros to use the non-obsolete versions.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@22109 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -37,6 +37,7 @@ AX_CHECK_ENABLE_DEBUG([info])
 AC_PROG_CC
 gl_EARLY
 gl_INIT
+AX_APPEND_LINK_FLAGS([-Wl,--as-needed],[LDFLAGS])
 AC_LANG_PUSH([C])
 if test "x$ax_enable_debug" != "xno"; then
     AX_TRACEBACK()
