--- a/LICENSE.in
+++ b/LICENSE.in
@@ -4,7 +4,7 @@
 // @PACKAGE_STRING@: @PACKAGE_DESCRIPTION@
 // @PACKAGE_URL@
 //
-// Copyright (C) 2010 The PECOS Development Team
+// Copyright (C) 2010, 2011 The PECOS Development Team
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the Version 2.1 GNU Lesser General
