esio: force rebuild on license update
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@25602 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -138,6 +138,7 @@ AX_CODE_COVERAGE
 dnl ------------------------------------------------
 dnl Generate Makefiles
 dnl ------------------------------------------------
+AC_SUBST([CONFIG_STATUS_DEPENDENCIES], ['$(top_srcdir)/LICENSE.in'])
 AC_CONFIG_FILES([
     LICENSE
     Makefile
