esio: enable color-tests
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@27629 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -17,7 +17,7 @@ AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_MACRO_DIR([m4])
 AX_PREFIX_CONFIG_H([esio/esio-config.h])
 AC_CANONICAL_TARGET
-AM_INIT_AUTOMAKE(1.11 no-define tar-ustar -Wall -Werror foreign)
+AM_INIT_AUTOMAKE(1.11 no-define tar-ustar color-tests -Wall foreign)
 AC_PREREQ([2.61])
 AX_AM_MACROS
 AX_ADD_AM_CTAGSFLAGS
