esio: double inclusion fix DCL32-CPP
See https://www.securecoding.cert.org/confluence/display/cplusplus/DCL32-CPP.+Do+not+declare+or+define+a+reserved+identifier
and https://savannah.gnu.org/bugs/?36197 for how it came up.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@30764 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/esio/version.h.in
+++ b/esio/version.h.in
@@ -23,8 +23,8 @@
 //-----------------------------------------------------------------------el-
 // $Id$
 
-#ifndef __ESIO_VERSION_H__
-#define __ESIO_VERSION_H__
+#ifndef ESIO_VERSION_H
+#define ESIO_VERSION_H
 
 /** @file
  * Provides ESIO version information.
@@ -47,4 +47,4 @@
                       + ESIO_MINOR_VERSION *    100  \
                       + ESIO_POINT_VERSION *      1)
 
-#endif /* __ESIO_VERSION_H__ */
+#endif /* ESIO_VERSION_H */
