esio: add gnulib maintainer-makefile
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@31295 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -11,6 +11,8 @@ AC_SUBST([PACKAGE_URL])
 dnl ------------------------------------------------
 dnl Initialization macros
 dnl ------------------------------------------------
+AC_CONFIG_COMMANDS_PRE([m4_ifdef([AH_HEADER],
+    [AC_SUBST([CONFIG_INCLUDE], m4_defn([AH_HEADER]))])])
 AC_CONFIG_SRCDIR([esio/esio.h])
 AM_CONFIG_HEADER(esio/config.h)
 AC_CONFIG_AUX_DIR([build-aux])
