esio: #2674 update license, URL
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@35625 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/LICENSE.in
+++ b/LICENSE.in
@@ -4,20 +4,21 @@
 // @PACKAGE_STRING@: @PACKAGE_DESCRIPTION@
 // @PACKAGE_URL@
 //
-// Copyright (C) 2010, 2011, 2012 The PECOS Development Team
+// Copyright (C) 2010, 2011, 2012, 2013 The PECOS Development Team
 //
-// This library is free software; you can redistribute it and/or
-// modify it under the terms of the Version 2.1 GNU Lesser General
-// Public License as published by the Free Software Foundation.
+// This file is part of @PACKAGE_NAME@.
 //
-// This library is distributed in the hope that it will be useful,
+// @PACKAGE_NAME@ is free software: you can redistribute it and/or modify
+// it under the terms of the GNU Lesser General Public License as published
+// by the Free Software Foundation, either version 2.1 of the License, or
+// (at your option) any later version.
+//
+// @PACKAGE_NAME@ is distributed in the hope that it will be useful,
 // but WITHOUT ANY WARRANTY; without even the implied warranty of
-// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
-// Lesser General Public License for more details.
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU Lesser General Public License for more details.
 //
-// You should have received a copy of the GNU Lesser General Public
-// License along with this library; if not, write to the Free Software
-// Foundation, Inc. 51 Franklin Street, Fifth Floor,
-// Boston, MA  02110-1301  USA
+// You should have received a copy of the GNU Lesser General Public License
+// along with @PACKAGE_NAME@.  If not, see <http://www.gnu.org/licenses/>.
 //
 //-----------------------------------------------------------------------el-
