esio: #2673 use .F90 not .f90
Reworks the build tree to use .F90 extensions rather than .f90.
This should aid portability wrt preprocessing as many compilers
will automatically preprocess .F90 files but will not do so for
.f90 files.

Required some build target-specific-object-file build tweakage
to get Automake to link up everything.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@35629 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/Makefile.am
+++ b/Makefile.am
@@ -43,8 +43,7 @@ DISTCLEANFILES =           \
     aminclude.am           \
     _configs.sed           \
     esio/esio-config.h     \
-    *__genmod.f90          \
-    *__genmod.mod
+    *__genmod.*
 MAINTAINERCLEANFILES =     \
     aclocal.m4             \
     autom4te.cache/*       \
