--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -18,15 +18,11 @@ moduledir          = @libdir@
 CC=@MPICC@
 FC=@MPIFC@
 
-# Make HDF5 C APIs visible during compilation
-# Notice HDF5 Fortran APIs are not used and so AM_FCFLAGS is not modified
-AM_CFLAGS   += $(HDF5_CFLAGS)
-AM_CPPFLAGS += $(HDF5_CPPFLAGS)
-
 # Make public C APIs visible in resulting libraries-- see visibility.h
 AM_CPPFLAGS += -DESIO_SHARED_EXPORTS
 
 # Internal ESIO C library consumed by both the public C and Fortran libraries
+# HDF5 C APIs visible during compilation, notice HDF5 Fortran APIs not used
 noinst_LTLIBRARIES                += libesio_internal.la
 libesio_internal_la_SOURCES        = chunksize.c      chunksize.h
 libesio_internal_la_SOURCES       += error.c          error.h
@@ -37,6 +33,8 @@ libesio_internal_la_SOURCES       += layout.c         layout.h
 libesio_internal_la_SOURCES       += metadata.c       metadata.h
 libesio_internal_la_SOURCES       += restart-rename.c restart-rename.h
 libesio_internal_la_SOURCES       += uri.c            uri.h
+libesio_internal_la_CFLAGS         = $(AM_CFLAGS)   $(HDF5_CFLAGS)
+libesio_internal_la_CPPFLAGS       = $(AM_CPPFLAGS) $(HDF5_CPPFLAGS)
 libesio_internal_la_LDFLAGS        = $(LTLIBINTL)         # gnulib requirement
 libesio_internal_la_LIBADD         = ../gnulib/libgnu.la  # gnulib requirement
 EXTRA_libesio_internal_la_SOURCES  = x-layout0.c          # x-macro template
@@ -61,18 +59,18 @@ pkginclude_HEADERS += esio-config.h
 BUILT_SOURCES      += esio-config.h # See AX_PREFIX_CONFIG_H
 
 # Public ESIO Fortran library and module files
-# ESIO Fortran uses only the HDF5 C API so HDF5_FLIBS does not appear below
+# ESIO Fortran uses only the ESIO C API so no HDF5 Fortran artifacts appear
 lib_LTLIBRARIES           += libesiof.la
 libesiof_la_LDFLAGS        = -release $(PACKAGE_VERSION)
 libesiof_la_LIBTOOLFLAGS   = --tag=FC
-libesiof_la_SOURCES        = esio_c_binding.f90 esio.f90
+libesiof_la_SOURCES        = esio_c_binding.F90 esio.F90
 module_DATA                =                    esio.mod
 libesiof_la_LIBADD         = libesio_internal.la
 libesiof_la_LIBADD        += $(HDF5_LDFLAGS)
-EXTRA_libesiof_la_SOURCES  = x-attribute.f90              # x-macro template
-EXTRA_libesiof_la_SOURCES += x-field.f90                  # x-macro template
-EXTRA_libesiof_la_SOURCES += x-line.f90                   # x-macro template
-EXTRA_libesiof_la_SOURCES += x-plane.f90                  # x-macro template
+EXTRA_libesiof_la_SOURCES  = x-attribute.F90              # x-macro template
+EXTRA_libesiof_la_SOURCES += x-field.F90                  # x-macro template
+EXTRA_libesiof_la_SOURCES += x-line.F90                   # x-macro template
+EXTRA_libesiof_la_SOURCES += x-plane.F90                  # x-macro template
 
 # Extra things to clean up
 CLEANFILES += *.mod *.gcno *.gcna
