--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -32,7 +32,7 @@ concepts1_SOURCES       = concepts1.c
 concepts1_LDADD         = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 noinst_PROGRAMS        += concepts2
-concepts2_SOURCES       = concepts2.f90
+concepts2_SOURCES       = concepts2.F90
 concepts2_LDADD         = ../esio/libesiof.la $(HDF5_LDFLAGS)
 concepts2_LIBTOOLFLAGS  = --tag=FC
 
