--- a/configure.ac
+++ b/configure.ac
@@ -67,11 +67,11 @@ dnl Manipulate Fortran settings and find MPI
 dnl ------------------------------------------------
 AC_PROG_FC
 AC_LANG_PUSH([Fortran])
-AC_FC_SRCEXT([f90])
+dnl BEGIN: Ensure that preprocessor is run on free-form Fortran .F90 sources
+dnl Stupidly complicated to get correct.  Modify FCFLAGS_F90 with result.
+dnl When Autoconf 2.69 is more common, AC_FC_PP_SRCEXT([F90]) should be used.
+AC_FC_SRCEXT([F90])
 AC_FC_FREEFORM()
-dnl BEGIN: Enable the preprocessor for all Fortran .f90 sources
-dnl Stupidly complicated to get correct.  Modify FCFLAGS_f90 with result.
-dnl
 ax_save_FCFLAGS=$FCFLAGS
 AC_LANG_WERROR
 AC_MSG_CHECKING([for flags required to enable Fortran preprocessing])
@@ -92,8 +92,8 @@ do
                       ])
 done
 AC_MSG_RESULT([$fppflag])
-FCFLAGS_f90="$FCFLAGS_f90 $fppflag"
-dnl END: Enable the preprocessor for all Fortran sources
+FCFLAGS_F90="$FCFLAGS_F90 $fppflag"
+dnl END: Ensure that preprocessor is run on free-form Fortran .F90 sources
 AC_FC_WRAPPERS
 AX_FCFLAGS_WARN_ALL
 if test "x$ax_enable_debug" != "xno"; then
