esio: #2687 -Wc,-fvisibility=hidden
Prefix visibility flags with -Wc, and use only where necessary.
In particular, not within examples or tests and not for the linker.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@36237 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -55,7 +55,7 @@ AX_LIB_HDF5([parallel])
 if test "x$with_hdf5" != "xyes"; then
     AC_MSG_ERROR([Parallel HDF5 installation not detected.])
 fi
-AX_VISIBILITY([hidden])
+AX_VISIBILITY([hidden],[:],[:])
 AX_TLS()
 AX_COMPILER_VENDOR()
 AX_WARNINGS_SANITIZE()
