esio: remove unnecessary HDF5_FFLAGS
We do not require this as we do not use the HDF5 Fortran API

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@36238 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -21,10 +21,9 @@ CLEANFILES      = # Append below
 CC=@MPICC@
 FC=@MPIFC@
 
-## Pick up HDF5 library includes
+## Pick up C-only HDF5 library includes
 AM_CFLAGS   += $(HDF5_CFLAGS)
 AM_CPPFLAGS += $(HDF5_CPPFLAGS)
-AM_FCFLAGS  += $(HDF5_FFLAGS)
 
 # Sample progams
 noinst_PROGRAMS        += concepts1
