--- a/esio.pc.in
+++ b/esio.pc.in
@@ -3,8 +3,8 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
-# HDF5/MPI installation used to build @PACKAGE_NAME@
-# Retrieve these using `pkg-config --variable=name @PACKAGE_NAME@`
+# HDF5/MPI installation used to build @PACKAGE_TARNAME@
+# Retrieve these using `pkg-config --variable=name @PACKAGE_TARNAME@`
 hdf5_version=@HDF5_VERSION@
 h5pcc=@H5CC@
 h5pfc=@H5FC@
@@ -13,14 +13,14 @@ mpifc=@MPIFC_LOCATION@
 hdf5_fflags=@HDF5_FFLAGS@
 hdf5_flibs=@HDF5_FLIBS@
 # Fortran compilation and linking information
-# Retrieve these using `pkg-config --variable=name @PACKAGE_NAME@`
+# Retrieve these using `pkg-config --variable=name @PACKAGE_TARNAME@`
 fflags=-I@libdir@
-flibs=-L@libdir@ -l@PACKAGE_NAME@f
+flibs=-L@libdir@ -l@PACKAGE_TARNAME@f
 
-Name: @PACKAGE_NAME@
+Name: @PACKAGE_TARNAME@
 Description: @PACKAGE_DESCRIPTION@
 URL: @PACKAGE_URL@
 Requires:
 Version: @VERSION@
-Libs: -L${libdir} -l@PACKAGE_NAME@
+Libs: -L${libdir} -l@PACKAGE_TARNAME@
 Cflags: -I${includedir}
