esio: update .gitignore
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@37340 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,19 @@
 /aclocal.m4
 /aminclude.am
 /autom4te.cache
+/config.cache
 /config.log
 /_configs.sed
 /config.status
 /configure
+/configure.ac
 /docs
+/foo__genmod.f90
+/foo__genmod.mod
 /libtool
 /LICENSE
 /Makefile
 /Makefile.in
 /*.pc
+/t__genmod.f90
+/t__genmod.mod
