esio: #2777 eliminate .git directories
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@37357 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,10 +15,11 @@ EXTRA_DIST  += build-aux/update_license.pl
 EXTRA_DIST  += m4/gnulib-cache.m4
 
 dist-hook: docs
-	: # Eliminate .svn directories in dist tarball
-	find $(distdir)/ -name '.svn' -type d -exec rm {} \;
 	: # Include generated documentation in the dist tarball
 	cp -rv $(top_builddir)/docs $(top_distdir)
+	: # Eliminate .git and .svn directories in dist tarball
+	find $(distdir)/ -name '.svn' -type d -exec rm {} \;
+	find $(distdir)/ -name '.git' -type d -exec rm {} \;
 
 # Tools in the auxillary directory
 AUX_DIST  = build-aux/install-sh
