include pecos configure summary
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@39569 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -138,6 +138,10 @@ DX_INIT_DOXYGEN([esio],[doxygen/doxygen.cfg],[docs])
 #-------------------------
 AX_CODE_COVERAGE
 
+# Query configuration environment
+
+AX_SUMMARIZE_ENV
+
 dnl ------------------------------------------------
 dnl Generate Makefiles
 dnl ------------------------------------------------
@@ -163,3 +167,7 @@ AC_MSG_NOTICE([Working around linking futziness by adding -Wl to libtool])
 AC_MSG_NOTICE([See http://mail.hdfgroup.org/pipermail/hdf-forum_hdfgroup.org/2011-March/008868.html])
 mv -v libtool libtool.bak
 $SED libtool.bak -e 's/^wl=""$/wl="-Wl,"/' > libtool && rm libtool.bak
+
+dnl Final summary
+
+AX_SUMMARIZE_CONFIG
