esio: update .gitignore from SVN
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@42356 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/esio/.gitignore
+++ b/esio/.gitignore
@@ -1,6 +1,7 @@
 /config.h
 /config.h.in
 /.deps
+/.libs
 /esio-config.h
 /.license.stamp
 /Makefile
@@ -9,3 +10,6 @@
 /*.mod
 /stamp-h1
 /version.h
+/*.o
+/*.lo
+/*.la
